changed secondary color

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>CV Templater - Convert Markdown CVs to Any Format</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
+        :root {
+            --primary: #ffffff;
+            --secondary: #e2e8f0;
+            --accent: #4f46e5;
+            --light: #f8fafc;
+            --dark: #1e293b;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -118,13 +126,13 @@
         }
 
         .btn-secondary {
-            background: rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.25);
             color: white;
-            border: 2px solid rgba(255, 255, 255, 0.3);
+            border: 2px solid rgba(255, 255, 255, 0.5);
         }
 
         .btn-secondary:hover {
-            background: rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.4);
             transform: translateY(-2px);
         }
 
