--- a/index.html
+++ b/index.html
@@ -283,10 +283,11 @@
         }
 
         .highlight {
-            background: linear-gradient(120deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(120deg, #ffd700 0%, #ff9d00 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            font-weight: bold;
         }
     </style>
 </head>
